--- a/Keras_SD210_contreTous.ipynb
+++ b/Keras_SD210_contreTous.ipynb
@@ -103,6 +103,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In the cell below, we perform data augmentation techniques.\n",
+        "\n",
+        "Our algorithm (decision trees) doesn't require scaled data, and allow their range to be heterogeneous. However, we can still mirror the data: since each sample is composed of two faces, and a certain range of features is separable with respect to one of the two faces, we can simply exchange them. This increases the size of the training set by a 2 factor."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HA2DgV5BY9Hm",
@@ -157,20 +166,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "wDMZ8y57il9B",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "wDMZ8y57il9B"
       },
       "source": [
-        "#from keras.utils.np_utils import to_categorical\n",
-        "\n",
-        "#ytrain = to_categorical(ytrain, 2)\n",
-        "#yval = to_categorical(yval, 2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "In the code cell below we apply cross-validation on the XGBClassifier model. We boost the learning of many decision trees which are considered as weak leaners.\n",
+        "The most important parameters are :\n",
+        "- learning_rate: similar to other gradient descent methods, the classifier perform more or less a gradient correction. A small learning rate will lead to very slow convergence, a big learning rate can make us miss the sweet spot.\n",
+        "- n_estimators: to be considered as a trade-off with the learning rate. It is the number of rounds performed by the classifier during learning. A too great number will lead to over-fitting.\n",
+        "- max_depth: the maximum depth related to the decision trees. The less it is, the more the decision trees are basic (hence having higher bias, which is not a problem for boosting)."
+      ]
     },
     {
       "cell_type": "code",
