--- a/Keras_SD210_contreTous.ipynb
+++ b/Keras_SD210_contreTous.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Challenge SD-TSIA210\n",
+        "\n",
+        "## TANG Joël & TORRES Claudia"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fANF7EcThjkT",
@@ -26,24 +35,13 @@
         }
       },
       "source": [
-        "#%%\n",
-        "#%tensorflow_version 1.x\n",
-        "import tensorflow as tf\n",
-        "#import keras\n",
-        "print(\"Using tensorflow version \" + str(tf.__version__))\n",
-        "#print(\"Using keras version \" + str(keras.__version__))\n",
+        "))\n",
         "\n",
         "import numpy as np\n",
         "import sys\n",
         "import os\n",
         "import matplotlib.pyplot as plt\n",
-        "import math\n",
-        "from sklearn.svm import LinearSVC\n",
-        "from sklearn import svm\n",
-        "from sklearn.ensemble import BaggingClassifier\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.model_selection import train_test_split"
+        "import plit"
       ],
       "execution_count": 2,
       "outputs": [
@@ -123,33 +121,19 @@
         }
       },
       "source": [
-        "#%%\n",
-        "# Pre-processing: we just remove the 13*2 first features, concerning only one of the two faces\n",
-        "#xtrain_preprocessed = xtrain[:, 26:]\n",
+        "6:]\n",
         "xtrain = xtrain.astype('float32')\n",
-        "xtest = np.loadtxt(root_dir + 'xtest_challenge.csv', delimiter=',', skiprows = 1).astype('float32')\n",
-        "\n",
-        "# We change the columns\n",
-        "#l2_diff_train = np.sqrt((xtrain[:, 0:13] - xtrain[:, 13:26])**2)\n",
-        "#l2_diff_test = np.sqrt((xtest[:, 0:13] - xtest[:, 13:26])**2)\n",
-        "#xtrain = np.hstack((l2_diff_train, xtrain[:, 26:]))\n",
-        "#xtest = np.hstack((l2_diff_test, xtest[:, 26:]))\n",
-        "\n",
-        "scaler = StandardScaler()\n",
-        "scaler.fit(xtrain)\n",
+        "xtest = np.loadtxt(root_dir + 'xtest_challenge.csv', delimiter=',', skiprows = 1).astype('floatain)\n",
         "\n",
         "x_train_permuter = np.copy(xtrain)\n",
         "x_train_permuter[:, :13] = xtrain[:, 13:26]\n",
         "x_train_permuter[:, 13:26] = xtrain[:, :13]\n",
         "\n",
         "new_x_train = np.concatenate((xtrain, x_train_permuter), axis=0)\n",
-        "new_y_train = np.concatenate((ytrain, ytrain), axis=0)\n",
-        "\n",
-        "#xtrain_preprocessed=scaler.transform(xtrain)\n",
-        "xtrain_preprocessed = xtrain\n",
-        "#xtest_preprocessed = scaler.transform(xtest)\n",
-        "xtest_preprocessed = xtest\n",
-        "#xtrain_preprocessed, xval_preprocessed, ytrain, yval = train_test_split(xtrain_preprocessed, ytrain, test_size=0.0) #KAMIKAZE\n",
+        "new_y_train = np.concatenate((ytrain, ytrain), axisain)\n",
+        "xtrain_preprocessed = xtest)\n",
+        "xtest_preprocessextest\n",
+        "KAZE\n",
         "print(xtrain_preprocessed.shape)\n",
         "print(ytrain.shape)"
       ],
@@ -193,26 +177,32 @@
       },
       "source": [
         "from xgboost import XGBClassifier\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "\n",
+        "import tensorflow as tf\n",
         "\n",
         "with tf.device('/device:GPU:0'):\n",
-        "  boost = XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,max_depth=6\n",
-        "                        gamma=0, learning_rate=0.25, max_delta_step=0,\n",
-        "                        min_child_weight=1, missing=None, n_estimators=700, nthread=-1,\n",
-        "                        objective='binary:logistic', sampling_method='gradient_based',\n",
-        "                        reg_alpha=0, reg_lambda=1, tree_method='gpu_hist',\n",
-        "                        scale_pos_weight=1, seed=0, silent=True, subsample=1)\n",
+        "    boost = XGBClassifier(base_score=0.45, colsample_bylevel=1, colsample_bytree=1,max_depth=6,\n",
+        "                          gamma=0, learning_rate=0.25, max_delta_step=0,\n",
+        "                          min_child_weight=1, missing=None, n_estimators=675, nthread=-1,\n",
+        "                          objective='binary:logistic', sampling_method='gradient_based',\n",
+        "                          reg_alpha=0, reg_lambda=1, tree_method='gpu_hist',\n",
+        "                          scale_pos_weight=1.002, silent=True, subsample=1)\n",
         "  \n",
-        "  #p_grid_boost = {'max_depth': [2,3,4,5,6,7,8,9,10], 'n_estimators':[500,600,700,800,900,1000]}   \n",
+        "    p_grid_boost = {'gamma': [0.5, 1, 1.5, 2],\n",
+        "                    'reg_lambda': [1.5, 2, 2.5, 3],\n",
+        "                    'colsample_bytree': [0.7, 0.85, 1.0],\n",
+        "                    'base_score': [0.45, 0.5],\n",
+        "                    'n_estimators': [650,655,660,665,670,675,680,685,690,695,700],\n",
+        "                    'learning_rate': [0.15, 0.2, 0.25,0.35]\n",
+        "                    }   \n",
         "\n",
-        "  #grid_boost = GridSearchCV(estimator=boost, param_grid=p_grid_boost, scoring=\"accuracy\", cv=5)\n",
+        "    grid_boost = RandomizedSearchCV(estimator=boost, param_distributions=p_grid_boost, scoring=\"accuracy\", cv=5, verbose=3)\n",
         "  \n",
-        "  #grid_boost.fit(xtrain_preprocessed, ytrain)\n",
-        "  boost.fit(new_x_train, new_y_train)\n",
+        "    grid_boost.fit(xtrain_preprocessed, ytrain)\n",
         "\n",
-        "  #print(\"Best Score: {}\".format(grid_boost.best_score_))\n",
-        "  #print(\"Best params: {}\".format(grid_boost.best_params_))\n",
-        "  #p_boost = boost.predict(xval_preprocessed)\n",
-        "  #print(p_boost.shape)"
+        "    print(\"Best Score: {}\".format(grid_boost.best_score_))\n",
+        "    print(\"Best params: {}\".format(grid_boost.best_params_))"
       ],
       "execution_count": 13,
       "outputs": [
@@ -238,13 +228,13 @@
         }
       },
       "source": [
-        "#boost = XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
-        "                        gamma=0, learning_rate=0.25, max_delta_step=0, max_depth=6,\n",
-        "                        min_child_weight=1, missing=None, n_estimators=700, nthread=-1,\n",
-        "                        objective='binary:logistic', sampling_method='gradient_based',\n",
-        "                        reg_alpha=0, reg_lambda=1, tree_method='gpu_hist',\n",
-        "                        scale_pos_weight=1, seed=0, silent=True, subsample=1)\n",
-        "#boost.fit(new_x_train, new_y_train)"
+        "boost = XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
+        "                      gamma=0, learning_rate=0.25, max_delta_step=0, max_depth=6,\n",
+        "                      min_child_weight=1, missing=None, n_estimators=700, nthread=-1,\n",
+        "                      objective='binary:logistic', sampling_method='gradient_based',\n",
+        "                      reg_alpha=0, reg_lambda=1, tree_method='gpu_hist',\n",
+        "                      scale_pos_weight=1, seed=0, silent=True, subsample=1)\n",
+        "boost.fit(new_x_train, new_y_train)"
       ],
       "execution_count": 7,
       "outputs": [
@@ -290,105 +280,7 @@
         "colab": {}
       },
       "source": [
-        "np.savetxt(root_dir + 'ytest_challenge_student_cv3.csv', output, fmt = '%1.0d', delimiter=',')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B3lJPEpvZH4E",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense, Activation, Flatten, Dropout\n",
-        "\n",
-        "# START CODE HERE\n",
-        "input_shape = 24\n",
-        "output_shape = 2\n",
-        "\n",
-        "new_model = Sequential([\n",
-        "    Dense(24, activation='relu', input_dim=(input_shape)),\n",
-        "    Dense(10, activation='relu'),\n",
-        "    Dense(6, activation='relu'),\n",
-        "    Dense(2, activation='softmax')\n",
-        "])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9Bw1VvJxa-cY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# The optimizers module provides a number of optimization algorithms for updating\n",
-        "# a netwok parameters accoridng to the computed error gradints\n",
-        "from keras import optimizers\n",
-        "\n",
-        "# START CODE HERE\n",
-        "\n",
-        "sgd = keras.optimizers.SGD(lr=0.08)\n",
-        "\n",
-        "new_model.compile(optimizer=sgd,\n",
-        "              loss='binary_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
-        "# END CODE HERE\n",
-        "# We can now have a look at the defined model topology\n",
-        "new_model.summary()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fvkN0rmKbB34",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# This is where the actual training-testing happens\n",
-        "# Number of epochs we want to train\n",
-        "n_epochs = 2\n",
-        "\n",
-        "# START CODE HERE\n",
-        "history = new_model.fit(xtrain_preprocessed, ytrain, batch_size=32, epochs=n_epochs, verbose=1, validation_data=(xval_preprocessed, yval))\n",
-        "# END CODE HERE"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6PZDmBoOkJTk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pred = new_model.predict_classes(xtest_preprocessed)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_Gfv4sgimx_c",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(pred.shape)\n",
-        "output = pred #ok\n",
-        "np.savetxt(root_dir + 'ytest_challenge_student.csv', output, fmt = '%1.0d', delimiter=',')"
+        "np.savetxt(root_dir + 'ytest_challenge_student_cv.csv', output, fmt = '%1.0d', delimiter=',')"
       ],
       "execution_count": 0,
       "outputs": []
